css/hover-effect-on-diff-directions.css
html {
	box-sizing: border-box;
	font-size: 62.5%;
	margin: 0;
	padding: 0;
}

*, *::before, *::after {
	box-sizing: inherit;
}

body {
	font-size: 1.6rem;
} 

div.multi-hover {
	position: relative;
}

div.multi-hover img {
	width: 100%;
}

div.multi-hover span {
	position: absolute;
	width: 100%;
	height: 100%;
	text-align: center;
	font-size: 2rem;
	transition: .3s linear;
	color: #fff;
	padding: 20%;
	z-index: 2;
	opacity: 0;
	font-family: Verdana, Geneva, sans-serif;
	font-size: 6vw;
	line-height: 1.5;
}

div.multi-hover span:nth-child(1) {
	top: 0; left: 90%;
	background: hsla(0, 70%, 50%, 0.6);
	/* right */
}

div.multi-hover span:nth-child(2) {
	top: -90%; left: 0;
	background: hsla(90, 70%, 50%, 0.6);
	/* top */
}
div.multi-hover span:nth-child(3) {
	top: 0; left: -90%;
	background: hsla(180, 70%, 50%, 0.6);
	/* left */
}

div.multi-hover span:nth-child(4) {
	top: 90%; left: 0;
	background: hsla(270, 70%, 50%, 0.6);
	/* bottom */
}

div.multi-hover {
	position: relative;
	overflow: hidden;
}

div.multi-hover span:hover {
	opacity: 1;
	z-index: 1;
}

div.multi-hover span:nth-child(odd):hover {
	left: 0;
}

div.multi-hover span:nth-child(even):hover {
	top: 0;
}

